apps/media/prowlarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: prowlarr
    part-of: media
  name: prowlarr
spec:
  serviceName: prowlarr
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
      part-of: media
  template:
    metadata:
      labels:
        app: prowlarr
        part-of: media
    spec:
      containers:
        - image: linuxserver/prowlarr:1.31.2
          name: prowlarr
          volumeMounts:
            - mountPath: /config
              name: prowlarr-config
          ports:
            - name: prowlarr
              containerPort: 9696
              protocol: TCP
      volumes:
        - name: arr-init-config
          configMap:
            name: arr-init-config
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: media-prowlarr-config
      restartPolicy: Always
