apps/media/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.home.8none1.com
    external-dns.alpha.kubernetes.io/target: traefik.srv.8none1.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.home.8none1.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: prowlarr
          port: http
      middlewares:
        - name: authentik-forward-auth
  tls:
    secretName: prowlarr-ingress-tls
